test/typeCheckTest/fail/test20.ic
class BadArrayCreation {
	void bad () {
		int [] x = new int[true];
	}
	
	void main (string [] args) {	
		bad();
	}
}